Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.8.6 (2019-03-18)
------------------

- The advertisement for JSON driver enablement in 1.8.5 was false (#176), but
  in this release they are ready for use.

1.8.5 (2019-03-15)
------------------

- GDAL seems to work best if GDAL_DATA is set as early as possible. Ideally it
  is set when building the library or in the environment before importing
  Fiona, but for wheels we patch GDAL_DATA into os.environ when fiona.env
  is imported. This resolves #731.
- A combination of bugs which allowed .cpg files to be overlooked has been
  fixed (#726).
- On entering a collection context (Collection.__enter__) a new anonymous GDAL
  environment is created if needed and entered. This makes `with
  fiona.open(...) as collection:` roughly equivalent to `with fiona.open(...)
  as collection, Env():`. This helps prevent bugs when Collections are created
  and then used later or in different scopes.
- Missing GDAL support for TopoJSON, GeoJSONSeq, and ESRIJSON has been enabled
  (#721).
- A regression in handling of polygons with M values (#724) has been fixed.
- Per-feature debug logging calls in OGRFeatureBuilder methods have been
  eliminated to improve feature writing performance (#718).
- Native support for datasets in Google Cloud Storage identified by "gs"
  resource names has been added (#709).
- Support has been added for triangle, polyhedral surface, and TIN geometry
  types (#679).
- Notes about using the MemoryFile and ZipMemoryFile classes has been added to
  the manual (#674).

1.8.4 (2018-12-10)
------------------

- 3D geometries can now be transformed with a specified precision (#523).
- A bug producing a spurious DriverSupportError for Shapefiles with a "time"
  field (#692) has been fixed.
- Patching of the GDAL_DATA environment variable was accidentally left in place
  in 1.8.3 and now has been removed.

1.8.3 (2018-11-30)
------------------
