@@ -1,11 +1,6 @@
 import collections
 import sys
 
-try:
-    from collections import OrderedDict
-except ImportError:
-    from ordereddict import OrderedDict
-
 if sys.version_info[0] >= 3:
     from urllib.parse import urlparse
     from collections import UserDict
