@@ -1,8 +1,5 @@
-argparse==1.4.0
 attrs==18.2.0
 click-plugins==1.0.4
 cligj==0.5.0
-enum34==1.1.6 ; python_version < '3.4'
 munch==2.3.2
-ordereddict==1.1 ; python_version <= '2.7'
 six==1.11.0
